--- a/darce.github.io--next-js-pages-router/components/features/ProjectDetails/ProjectDetails.module.scss
+++ b/darce.github.io--next-js-pages-router/components/features/ProjectDetails/ProjectDetails.module.scss
@@ -11,10 +11,6 @@
         }
     }
 
-    .metadata {}
-
-    .links {}
-
     >aside {
         padding: 0 $s-x-large;
         font-weight: 200;
